# Scenic

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  =  CODE_OF_CONDUCT.md  INCIDENT_RESPONSE.md  LICENSE  MUJOCO_LOG.TXT  Makefile  README.md  SECURITY.md  Untitled.ipynb  codecov.yml  coverage.json  dependencyAnalysis.ipynb  error_table.csv  ind_test.py  output.txt  params.txt  pid_err.csv  plot_data.csv  pure_pursuit_err.csv  pyproject.toml  run_smt_encoding.sh  safe_table.csv  scenic_query.py  setup.py  test.py  test.scenic  testScenicSmtEncoding.py  test_differential_evolution.py  test_new.py  test_scikit.py  test_smt_encoding.smt2  tox.ini  toxfile.py  (+1 more)
-o/: worldInfo.json
.github/: PULL_REQUEST_TEMPLATE.md  check_latest_simulators.py  slack_oncall_reminder.py
VerifAI/: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  tox.ini
VerifAI/docs/: basic_usage.rst  conf.py  dynamics.rst  feature_api.rst  index.rst  installation.rst  multi_objective.rst  parallel_falsification.rst  publications.rst  samplers.rst  server_client.rst  tutorial.md
VerifAI/examples/data_augmentation/: classifier.py  falsifier.py
VerifAI/examples/data_augmentation/counterexample_images/: README
VerifAI/examples/data_augmentation/data/car_detector/checkpoint/: car-detector-model.index  checkpoint
VerifAI/examples/data_augmentation/model/: dataset.py  model.py  testNN.py  train.py  utils.py
VerifAI/examples/data_augmentation/renderer/: generator.py  image.py  imgSampSpaces.pickle  kittiLib.py  library.py  utils.py
VerifAI/examples/multi_objective/: README.md  intersection_01.scenic  multi_objective_falsification.py  uberCrashNewton.scenic
VerifAI/examples/openai_gym/cartpole/: cartpole_falsifier.py  cartpole_simulation.py
VerifAI/examples/openai_gym/mountaincar/: mountaincar_falsifier.py  mountaincar_simulation.py
VerifAI/examples/scenic/: README.md  falsify_distance.py
VerifAI/examples/scenic/carla/: carlaChallenge1.scenic
VerifAI/examples/scenic/newtonian/: carlaChallenge2.scenic
VerifAI/examples/webots/controllers/: Makefile
VerifAI/examples/webots/controllers/cones_lanechange_supervisor/: cones_lanechange_falsifier.py  cones_lanechange_supervisor.py
VerifAI/examples/webots/controllers/gaussian_cnn/: evaluation_utils.py  gaussian_cnn.py  gen_utils.py  perspective_utils.py  squeezedet.py
VerifAI/examples/webots/controllers/gaussian_cnn/data/: distance_regression.xlsx
VerifAI/examples/webots/controllers/gaussian_cnn/data/checkpoints/: model-traffic-cones.ckpt-1150.index
VerifAI/examples/webots/controllers/gaussian_cnn/src/: eval.py  train.py
VerifAI/examples/webots/controllers/gaussian_cnn/src/config/: __init__.py  kitti_model_config.py  kitti_res50_config.py  kitti_squeezeDetPlus_config.py  kitti_squeezeDet_config.py  kitti_vgg16_config.py
VerifAI/examples/webots/controllers/gaussian_cnn/src/dataset/: kitti.py  voc_eval.py
VerifAI/examples/webots/controllers/gaussian_cnn/src/nets/: squeezeDet.py
VerifAI/examples/webots/controllers/scenic_cones_supervisor/: lane_cones.scenic  scenic_cones_sampler.py  scenic_cones_supervisor.py
VerifAI/examples/webots/controllers/scenic_intersection_supervisor/: guideways_accident.py  intersection_crash.scenic  scenic_intersection_sampler.py  scenic_intersection_supervisor.py
VerifAI/examples/webots/controllers/smart_brake/: smart_brake.py
VerifAI/examples/webots/controllers/turning_car_guideway/: turning_car_guideway.py
VerifAI/examples/webots/worlds/: scenic_intersection.wbt  shattuck_build.wbt  shattuck_buildings_falsif.wbt
VerifAI/examples/xplane/: README.md  config.yaml  elevations.csv  example.scenic  runway.yaml
VerifAI/src/verifai/: __init__.py  client.py  error_table.py  falsifier.py  monitor.py  scenic_server.py  server.py
VerifAI/src/verifai/features/: features.py
VerifAI/src/verifai/samplers/: __init__.py  bayesian_optimization.py  cross_entropy.py  dist_BO.py  domain_sampler.py  eg_sampler.py  feature_sampler.py  grid_sampler.py  halton.py  multi_armed_bandit.py  multi_objective.py  random_sampler.py  rejection.py  scenic_sampler.py  simulated_annealing.py
VerifAI/src/verifai/simulators/car_simulator/: car_dynamics.py  car_object.py  client_car_sim.py  lane.py  simulator.py
VerifAI/src/verifai/simulators/car_simulator/examples/: simple_control.py
VerifAI/src/verifai/simulators/car_simulator/examples/control_utils/: LQR_computation.py
VerifAI/src/verifai/simulators/car_simulator/examples/lanekeeping_LQR/: lanekeeping_falsifier.py  lanekeeping_simulation.py
VerifAI/src/verifai/simulators/carla/: carla_scenic_task.py  carla_task.py  carla_world.py  client_carla.py
VerifAI/src/verifai/simulators/carla/agents/: brake_agent.py  overtake_agent.py  pid_agent.py  pid_follow_controller.py
VerifAI/src/verifai/simulators/openai_gym/: baselines_task.py  client_gym.py
VerifAI/src/verifai/simulators/webots/: client_webots.py  webots_task.py
VerifAI/src/verifai/simulators/xplane/: server.py
VerifAI/src/verifai/simulators/xplane/utils/: controller.py  geometry.py  images.py
VerifAI/src/verifai/utils/: frozendict.py  utils.py
VerifAI/tests/: README.txt  conftest.py  test_bayesianOptimization.py  test_crossEntropy.py  test_distBO.py  test_domains.py  test_examples.py  test_features.py  test_grid.py  test_halton.py  test_samplers.py  test_simulatedAnnealing.py  utils.py
VerifAI/tests/scenic/: conftest.py  scenic_driving.scenic  scenic_road.scenic  test_scenic.py
docs/: Makefile  analyzer.py  api.rst  compiler.rst  conf.py  credits.rst  developing.rst  glossary.rst  governance.rst  index.rst  install_notes.rst  internals.rst  intersphinx_config.py  language_reference.rst  libraries.rst  library.rst  new.rst  new_simulator.rst  options.rst  porting.rst  publications.rst  quickstart.rst  requirements.txt  roadmap.rst  simulators.rst  syntax_details.rst  syntax_guide.rst  tutorial.rst  tutorial_dynamic.rst
examples/: README.md  __init__.py  conftest.py  test_examples.py
grammar/: scenic.gram
(+1441 files in other folders)
