[project]
name = "scenic"
version = "2.1.0b4"
description = "The Scenic scenario description language."
authors = [
	{ name = "Daniel Fremont", email = "dfremont@ucsc.edu" },
	{ name = "Edward Kim" },
	{ name = "Tommaso Dreossi" },
	{ name = "Shromona Ghosh" },
	{ name = "Xiangyu Yue" },
	{ name = "Alberto L. Sangiovanni-Vincentelli" },
	{ name = "Sanjit A. Seshia" },
]
maintainers = [
	{ name = "Daniel Fremont", email = "dfremont@ucsc.edu" },
]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
	"Operating System :: OS Independent",
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: BSD License",
	"Programming Language :: Python :: 3",
]

dependencies = [
	"dotmap ~= 1.3",
	"shapely ~= 1.7",
	"mapbox_earcut >= 0.12.10",
	"matplotlib ~= 3.2",
	"scipy ~= 1.6",
	"antlr4-python3-runtime ~= 4.11",
	"opencv-python ~= 4.5",
	"numpy ~= 1.21",
	"pillow ~= 9.1",
	'pygame ~= 2.1.3.dev8; python_version >= "3.11"',
	'pygame ~= 2.0; python_version < "3.11"',
	"attrs >= 19.3.0",
	"decorator ~= 5.0",
	'importlib_metadata >= 3.7, <5; python_version < "3.8"',
]

[project.optional-dependencies]
guideways = [
	'pyproj ~= 3.0; python_version < "3.10"',
	'pyproj ~= 3.3; python_version >= "3.10"',
]
test = [	# minimum dependencies for running tests (used for tox virtualenvs)
	"pytest-randomly ~= 3.2",
	"pytest >= 6.0.0, <8",
]
dev = [
	"scenic[test]",		# all dependencies from 'test' extra above
	"pytest-cov >= 3.0.0",
	"sphinx >= 4.1.0, <6",
	"tox ~= 3.14",
	"sphinx_rtd_theme >= 0.5.2",
	"astor >= 0.8.1",
	"inflect ~= 5.5",
	"scenic[guideways]", # for running guideways modules
]

[project.urls]
Repository = "https://github.com/BerkeleyLearnVerify/Scenic"
Documentation = "https://scenic-lang.readthedocs.io"

[project.scripts]
scenic = 'scenic.__main__:dummy'

[project.entry-points."pygments.lexers"]
scenic = "scenic.syntax.pygment:ScenicLexer"

[build-system]
requires = ["flit_core >= 3.2, <4"]
build-backend = "flit_core.buildapi"
