[project]
name = "scenic"
version = "3.1.0a1"
description = "The Scenic scenario description language."
authors = [
	{ name = "Daniel Fremont" },
	{ name = "Eric Vin" },
	{ name = "Shun Kashiwa" },
	{ name = "Edward Kim" },
	{ name = "Tommaso Dreossi" },
	{ name = "Shromona Ghosh" },
	{ name = "Xiangyu Yue" },
	{ name = "Alberto L. Sangiovanni-Vincentelli" },
	{ name = "Sanjit A. Seshia" },
]
maintainers = [
	{ name = "Daniel Fremont", email = "dfremont@ucsc.edu" },
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
	"Operating System :: OS Independent",
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: BSD License",
	"Programming Language :: Python :: 3",
]

dependencies = [
	"antlr4-python3-runtime ~= 4.11",
	"attrs >= 19.3.0",
	"dotmap ~= 1.3",
	"mapbox_earcut >= 0.12.10",
	"matplotlib ~= 3.2",
	"manifold3d >= 2.5.1",
	"networkx >= 2.6",
	"numpy >= 1.24",
	"opencv-python ~= 4.5",
	"pegen >= 0.3.0",
	"pillow >= 9.1",
	'pygame >= 2.1.3.dev8, <3; python_version >= "3.11"',
	'pygame ~= 2.0; python_version < "3.11"',
	"pyglet >= 1.5",
	"python-fcl >= 0.7",
	"Rtree ~= 1.0",
	"rv-ltl ~= 0.1",
	"scikit-image ~= 0.21",
	"scipy ~= 1.7",
	"shapely ~= 2.0",
	"trimesh >=4.0.9, <5",
]

[project.optional-dependencies]
guideways = [
	'pyproj ~= 3.0; python_version < "3.10"',
	'pyproj ~= 3.3; python_version >= "3.10"',
]
metadrive = [
	"metadrive-simulator >= 0.4.3",
	"sumolib >= 1.21.0",
]
test = [	# minimum dependencies for running tests (used for tox virtualenvs)
	"pytest >= 7.0.0, <8",
	"pytest-cov >= 3.0.0",
	"pytest-randomly ~= 3.2",
]
test-full = [  # like 'test' but adds dependencies for optional features
	"scenic[test]",       # all dependencies from 'test' extra above
	"scenic[guideways]",  # for running guideways modules
	'scenic[metadrive]; python_version <= "3.11"',  # MetaDrive only supports Python ≤ 3.11; excluded for newer versions
	"astor >= 0.8.1",
	'carla >= 0.9.12; python_version <= "3.10" and (platform_system == "Linux" or platform_system == "Windows")',
	"dill",
	"exceptiongroup",
	"inflect ~= 5.5",
	"pygments ~= 2.11",
	"sphinx >= 6.2.0, <7.2.0",
	"sphinx_rtd_theme >= 0.5.2",
	"sphinx-tabs ~= 3.4.1",
	"verifai >= 2.1.0b1",
]
dev = [
	"scenic[test-full]",
	"black ~= 25.1.0",
	"isort ~= 5.12.0",
	"pre-commit ~= 3.0",
	"pytest-cov >= 3.0.0",
	"tox ~= 4.0",
]

[project.urls]
Homepage = "https://scenic-lang.org/"
Repository = "https://github.com/BerkeleyLearnVerify/Scenic"
Documentation = "https://docs.scenic-lang.org"

[project.scripts]
scenic = 'scenic.__main__:dummy'

[project.entry-points."pygments.lexers"]
scenic = "scenic.syntax.pygment:ScenicLexer"

[project.entry-points."pygments.styles"]
scenic = "scenic.syntax.pygment:ScenicStyle"

[build-system]
requires = ["flit_core >= 3.2, <4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["docs/images/logo-full.svg"]

[tool.black]
line-length = 90
force-exclude = '''
^/src/scenic/syntax/parser\.py
| ^/src/scenic/simulators/webots/WBT.*
| ^/tests/syntax/polychrome.*
'''

[tool.isort]
profile = "black"
line_length = 90
combine_as_imports = "true"
force_sort_within_sections = "true"
treat_all_comments_as_code = "true"
skip_gitignore = "true"
extend_skip_glob = [
	"src/scenic/simulators/webots/WBT.*",
	"tests/syntax/polychrome.*",
]

[tool.pytest.ini_options]
norecursedirs = ["examples"]

[tool.coverage.run]
source = ["src"]
